added sign-in and sign-out features

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,11 @@
 			<nav>
 				<ul class="nav pull-right">
 					<li><%= link_to "Home", root_path %></li>
-					<li><%= link_to "Sign In", root_path %></li>
+					<% if signed_in? %>
+						<li><%= link_to "Sign out", signout_path %>
+					<% else %>
+						<li><%= link_to "Sign In", new_session_path %></li>
+					<% end %>
 				</ul>
 			</nav>
 		</div>
