--- a/app/views/counter/home.html.erb
+++ b/app/views/counter/home.html.erb
@@ -3,5 +3,5 @@
 
 	<h2>This is the home page for the Logged In App which counts the number of times User have into into this app</h2>
 
-	<%= link_to "Sign Up", new_user_path, class: "btn" %>
+	<%= link_to "Sign Up", new_user_path, class: "btn btn-large btn-primary" %>
 </div>
