--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,7 +13,7 @@
 					<%= f.label :password_confirmation %>
 					<%= f.password_field :password_confirmation %><br>
 
-				<%= f.submit "Create Account" %>
+				<%= f.submit "Create Account", class: "btn btn-large btn-primary" %>
 
 			<% end %>
 	</div>
