--- a/app/views/counter/home.html.erb
+++ b/app/views/counter/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center">
 	<h1>Welcome to Logged In App</h1>
 
-	<h2>This is the home page for the Logged In App which counts the number of times User have into into this app</h2>
+	<h3>This is the home page for the Logged In App which counts the number of times User have logged into into this app</h3>
 
 	<%= link_to "Sign Up", new_user_path, class: "btn btn-large btn-primary" %>
 </div>
