--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+ <div class="row" id="signup">
 	<div class="span6 offset4">
 		<h1>Sign Up</h1>
 
@@ -13,7 +13,7 @@
 					<%= f.label :password_confirmation %>
 					<%= f.password_field :password_confirmation %><br>
 
-				<%= f.submit "Create Account", class: "btn btn-large btn-primary" %>
+				<%= f.submit "Create Account", class: "btn btn-large 		btn-primary" %>
 
 			<% end %>
 	</div>
