--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,8 +7,9 @@
 					<li><%= link_to "Home", root_path %></li>
 					<% if signed_in? %>
 						<li><%= link_to "Sign out", signout_path %>
+						<li><%= link_to "Profile", show_user_path %>
 					<% else %>
-						<li><%= link_to "Sign In", new_session_path %></li>
+						<li><%= link_to "Sign In", new_session_path, class: 'sign-in' %></li>
 					<% end %>
 				</ul>
 			</nav>
